--- a/pallets/free-tx/Cargo.toml
+++ b/pallets/free-tx/Cargo.toml
@@ -11,32 +11,31 @@ publish   =false
 [dependencies]
 codec     ={ package="parity-scale-codec", version="3.6.3", default-features=false }
 scale-info={ version="2.1.1", default-features=false, features=["derive"] }
+log       ={ version="0.4.0", default-features=false }
 
+frame-benchmarking={ version="25.0.0", default-features=false, optional=true }
+frame-support     ={ version="25.0.0", default-features=false }
+frame-system      ={ version="25.0.0", default-features=false }
+pallet-staking    ={ version="25.0.0", default-features=false }
 sp-runtime        ={ version="28.0.0", default-features=false }
 sp-staking        ={ version="23.0.0", default-features=false }
-frame-benchmarking={ default-features=false, optional=true, version="25.0.0" }
-frame-support     ={ default-features=false, version="25.0.0" }
-frame-system      ={ default-features=false, version="25.0.0" }
-pallet-staking    ={ version="25.0.0", default-features=false }
-sp-std            ={ package="sp-std", version="12.0.0", default-features=false }
-
-log={ version="0.4.0", default-features=false }
+sp-std            ={ version="12.0.0", default-features=false }
 
 [dev-dependencies]
-sp-core                        ={ version="25.0.0", default-features=false }
-sp-io                          ={ default-features=false, version="27.0.0" }
-sp-tracing                     ={ default-features=false, version="14.0.0" }
-sp-npos-elections              ={ default-features=false, version="23.0.0" }
-pallet-balances                ={ default-features=false, version="25.0.0" }
+frame-election-provider-support={ version="25.0.0", default-features=false }
+pallet-authorship              ={ version="25.0.0", default-features=false }
+pallet-bags-list               ={ version="24.0.0", default-features=false }
+pallet-balances                ={ version="25.0.0", default-features=false }
 pallet-session                 ={ version="25.0.0", default-features=false }
-pallet-timestamp               ={ default-features=false, version="24.0.0" }
-pallet-bags-list               ={ default-features=false, version="24.0.0" }
 pallet-staking-reward-curve    ={ version="10.0.0" }
-frame-election-provider-support={ default-features=false, version="25.0.0" }
+pallet-timestamp               ={ version="24.0.0", default-features=false }
+sp-core                        ={ version="25.0.0", default-features=false }
+sp-io                          ={ version="27.0.0", default-features=false }
+sp-npos-elections              ={ version="23.0.0", default-features=false }
+sp-tracing                     ={ version="14.0.0", default-features=false }
 
-pallet-staking-extension={ version="0.0.9", default-features=false, path="../staking" }
-pallet-relayer          ={ version="0.0.9", default-features=false, path="../relayer" }
-pallet-authorship       ={ default-features=false, version="25.0.0" }
+pallet-staking-extension={ version="0.0.9", path="../staking", default-features=false }
+pallet-relayer          ={ version="0.0.9", path="../relayer", default-features=false }
 
 [features]
 default=["std"]
@@ -46,15 +45,15 @@ runtime-benchmarks=[
   'frame-system/runtime-benchmarks',
 ]
 std=[
-  "scale-info/std",
-  "sp-runtime/std",
   "frame-support/std",
   "frame-system/std",
-  "sp-staking/std",
-  "pallet-relayer/std",
-  "pallet-staking/std",
-  'pallet-staking-extension/std',
-  "pallet-balances/std",
   "log/std",
+  "pallet-balances/std",
+  "pallet-relayer/std",
+  "pallet-staking-extension/std",
+  "pallet-staking/std",
+  "scale-info/std",
+  "sp-runtime/std",
+  "sp-staking/std",
 ]
 try-runtime=["frame-support/try-runtime"]
