--- a/pallets/transaction-pause/Cargo.toml
+++ b/pallets/transaction-pause/Cargo.toml
@@ -9,20 +9,23 @@ edition   ='2021'
 publish   =false
 
 [dependencies]
-codec             ={ package="parity-scale-codec", version="3.6.3", default-features=false, features=["derive"] }
-scale-info        ={ version="2.1", default-features=false, features=["derive"] }
+codec     ={ package="parity-scale-codec", version="3.6.3", default-features=false, features=["derive"] }
+scale-info={ version="2.1", default-features=false, features=["derive"] }
+
+frame-benchmarking={ version="25.0.0", default-features=false, optional=true }
+frame-support     ={ version="25.0.0", default-features=false }
+frame-system      ={ version="25.0.0", default-features=false }
 sp-runtime        ={ version="28.0.0", default-features=false }
-frame-benchmarking={ default-features=false, optional=true, version="25.0.0" }
-frame-support     ={ default-features=false, version="25.0.0" }
-frame-system      ={ default-features=false, version="25.0.0" }
-sp-std            ={ package="sp-std", version="12.0.0", default-features=false }
+sp-std            ={ version="12.0.0", default-features=false }
 
 [dev-dependencies]
+smallvec="1.4.1"
+
 pallet-balances={ version="25.0.0" }
-pallet-programs={ version="0.0.9", default-features=false, path="../programs" }
-smallvec       ="1.4.1"
 sp-core        ={ version="25.0.0" }
 sp-io          ={ version="27.0.0" }
+
+pallet-programs={ version="0.0.9", default-features=false, path="../programs" }
 
 [features]
 default=["std"]
@@ -32,11 +35,11 @@ runtime-benchmarks=[
   'frame-system/runtime-benchmarks',
 ]
 std=[
-  "scale-info/std",
-  "sp-runtime/std",
   "frame-support/std",
   "frame-system/std",
   "pallet-programs/std",
+  "scale-info/std",
+  "sp-runtime/std",
   "sp-std/std",
 ]
 try-runtime=["frame-support/try-runtime"]
