--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -16,142 +16,108 @@ targets=['x86_64-unknown-linux-gnu']
 name='entropy'
 
 [dependencies]
-jsonrpc-core          ='18.0.0'
-serde_json            ='1.0.0'
-log                   ="0.4.17"
-lazy_static           ={ version="1.4.0", features=["spin_no_std"] }
-clap                  ={ version="4.0.9", features=["derive"], optional=true }
-codec                 ={ package="parity-scale-codec", version="3.0.0" }
-structopt             ='0.3.8'
-grandpa-primitives    ={ version="10.0.0", package="sp-consensus-grandpa" }
-hex-literal           ="0.3.1"
-pallet-im-online      ={ version="24.0.0" }
-sc-chain-spec         ={ version="24.0.0" }
-serde                 ={ version="1.0.126", features=["derive"] }
-sp-authority-discovery={ version="23.0.0" }
-sp-consensus-babe     ={ version="0.29.0" }
 
-# node-primitives                   ={ version="2.0.0", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
+# Third-party dependencies
+clap            ={ version="4.0.9", features=["derive"], optional=true }
+codec           ={ package="parity-scale-codec", version="3.0.0" }
+futures         ="0.3.16"
+hex-literal     ="0.3.1"
+jsonrpc-core    ='18.0.0'
+jsonrpsee       ={ version="0.16.2", features=["server"] }
+lazy_static     ={ version="1.4.0", features=["spin_no_std"] }
+log             ="0.4.17"
+pallet-im-online={ version="24.0.0" }
+rand            ="0.7.2"
+serde           ={ version="1.0.126", features=["derive"] }
+serde_json      ='1.0.0'
+structopt       ='0.3.8'
 
-rand                              ="0.7.2"
-sc-sync-state-rpc                 ={ version="0.31.0" }
-futures                           ="0.3.16"
-sc-network                        ={ version="0.31.0" }
-sc-network-common                 ={ version="0.30.0" }
-sc-network-sync                   ={ version="0.30.0" }
-sc-consensus-slots                ={ version="0.30.0" }
-grandpa                           ={ version="0.16.0", package="sc-consensus-grandpa" }
-sc-consensus-grandpa-rpc          ={ version="0.16.0" }
-sp-transaction-storage-proof      ={ version="23.0.0" }
-sc-authority-discovery            ={ version="0.31.0" }
-sc-consensus-babe-rpc             ={ version="0.31.0" }
-sc-consensus-epochs               ={ version="0.30.0" }
-sp-keystore                       ={ version="0.31.0" }
-jsonrpsee                         ={ version="0.16.2", features=["server"] }
-sp-inherents                      ={ version="23.0.0" }
-sp-keyring                        ={ version="28.0.0" }
-frame-system                      ={ version="25.0.0" }
-frame-system-rpc-runtime-api      ={ version="23.0.0" }
-pallet-transaction-payment        ={ version="25.0.0" }
+# Substrate Client
+
+grandpa                 ={ version="0.16.0", package="sc-consensus-grandpa" }
+node-inspect            ={ version="0.9.0", package="staging-node-inspect", optional=true }
+sc-authority-discovery  ={ version="0.31.0" }
+sc-basic-authorship     ={ version="0.31.0" }
+sc-chain-spec           ={ version="24.0.0" }
+sc-cli                  ={ version="0.33.0", optional=true }
+sc-client-api           ={ version="25.0.0" }
+sc-consensus            ={ version="0.30.0" }
+sc-consensus-babe       ={ version="0.31.0" }
+sc-consensus-babe-rpc   ={ version="0.31.0" }
+sc-consensus-epochs     ={ version="0.30.0" }
+sc-consensus-grandpa-rpc={ version="0.16.0" }
+sc-consensus-slots      ={ version="0.30.0" }
+sc-executor             ={ version="0.29.0" }
+sc-network              ={ version="0.31.0" }
+sc-network-common       ={ version="0.30.0" }
+sc-network-sync         ={ version="0.30.0" }
+sc-offchain             ={ version="26.0.0" }
+sc-rpc                  ={ version="26.0.0" }
+sc-rpc-api              ={ version="0.30.0" }
+sc-service              ={ version="0.32.0" }
+sc-storage-monitor      ={ version="0.13.0" }
+sc-sync-state-rpc       ={ version="0.31.0" }
+sc-sysinfo              ={ version="24.0.0" }
+sc-telemetry            ={ version="12.0.0" }
+sc-transaction-pool     ={ version="25.0.0" }
+sc-transaction-pool-api ={ version="25.0.0" }
+
+# Substrate Primitives
+grandpa-primitives          ={ version="10.0.0", package="sp-consensus-grandpa" }
+sp-api                      ={ version="23.0.0" }
+sp-authority-discovery      ={ version="23.0.0" }
+sp-block-builder            ={ version="23.0.0" }
+sp-blockchain               ={ version="25.0.0" }
+sp-consensus                ={ version="0.29.0" }
+sp-consensus-babe           ={ version="0.29.0" }
+sp-core                     ={ version="25.0.0" }
+sp-inherents                ={ version="23.0.0" }
+sp-keyring                  ={ version="28.0.0" }
+sp-keystore                 ={ version="0.31.0" }
+sp-runtime                  ={ version="28.0.0" }
+sp-timestamp                ={ version="23.0.0" }
+sp-transaction-storage-proof={ version="23.0.0" }
+substrate-frame-rpc-system  ={ version="25.0.0" }
+
+# FRAME Dependencies
+frame-benchmarking          ={ version="25.0.0" }
+frame-benchmarking-cli      ={ version="29.0.0", optional=true }
+frame-system                ={ version="25.0.0" }
+frame-system-rpc-runtime-api={ version="23.0.0" }
+
+# Substrate Pallets
 pallet-asset-conversion-tx-payment={ version="7.0.0" }
+pallet-transaction-payment        ={ version="25.0.0" }
+pallet-transaction-payment-rpc    ={ version="27.0.0" }
 
-pallet-staking-extension={ version="0.0.9", path="../../pallets/staking" }
+# Entropy Dependencies
+entropy-runtime         ={ version="0.0.9", path="../../runtime" }
+entropy-shared          ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
 pallet-free-tx          ={ version="0.0.9", path="../../pallets/free-tx" }
 pallet-relayer          ={ version="0.0.9", path="../../pallets/relayer" }
-
-node-inspect={ version="0.9.0", package="staging-node-inspect", optional=true }
-
-# TODO (Nando): I think we can get rid of this
-# substrate-frame-cli               ={ version="29.0.0", optional=true }
-
-sc-sysinfo={ version="24.0.0" }
-
-# TODO (Nando): I think we can get rid of this
-# substrate-state-trie-migration-rpc={ version="4.0.0-dev", git='https://github.com/paritytech/substrate', branch="polkadot-v1.0.0" }
-
-sc-cli            ={ version="0.33.0", optional=true }
-sc-storage-monitor={ version="0.13.0" }
-
-# TODO (Nando): I think we can get rid of this
-# pallet-asset-tx-payment           ={ version="25.0.0" }
-
-sc-offchain={ version="26.0.0" }
-
-entropy-shared ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
-entropy-runtime={ version="0.0.9", path="../../runtime" }
-
-frame-benchmarking            ={ version="25.0.0" }
-frame-benchmarking-cli        ={ version="29.0.0", optional=true }
-pallet-transaction-payment-rpc={ version="27.0.0" }
-sc-basic-authorship           ={ version="0.31.0" }
-sc-client-api                 ={ version="25.0.0" }
-sc-consensus                  ={ version="0.30.0" }
-sc-consensus-babe             ={ version="0.31.0" }
-sc-executor                   ={ version="0.29.0" }
-sc-rpc                        ={ version="26.0.0" }
-sc-rpc-api                    ={ version="0.30.0" }
-sc-service                    ={ version="0.32.0" }
-sc-telemetry                  ={ version="12.0.0" }
-sc-transaction-pool           ={ version="25.0.0" }
-sc-transaction-pool-api       ={ version="25.0.0" }
-sp-api                        ={ version="23.0.0" }
-sp-block-builder              ={ version="23.0.0" }
-sp-blockchain                 ={ version="25.0.0" }
-sp-consensus                  ={ version="0.29.0" }
-sp-core                       ={ version="25.0.0" }
-sp-runtime                    ={ version="28.0.0" }
-sp-timestamp                  ={ version="23.0.0" }
-substrate-frame-rpc-system    ={ version="25.0.0" }
+pallet-staking-extension={ version="0.0.9", path="../../pallets/staking" }
 
 [build-dependencies]
 clap         ={ version="4.2.5", optional=true }
 clap_complete={ version="3.0", optional=true }
 
-# TODO(Nando): Might be able to get rid of this since it's also in main deps
-node-inspect={ version="0.9.0", package="staging-node-inspect", optional=true }
-
+pallet-balances             ={ version="25.0.0" }
 substrate-build-script-utils={ version="9.0.0" }
-
-# TODO(Nando): Might be able to get rid of this
-# substrate-frame-cli               ={ version="29.0.0", optional=true }
-
-try-runtime-cli={ version="0.35.0" }
-
-# TODO(Nando): Might be able to get rid of this since it's also in main deps
-# sc-cli                            ={ version="0.33.0", optional=true }
-
-pallet-balances={ version="25.0.0" }
-
-# TODO(Nando): Might be able to get rid of this
-# sc-consensus-aura = { version = "0.31.0" }
+try-runtime-cli             ={ version="0.35.0" }
 
 [dev-dependencies]
 tempfile  ="3.1.0"
 sp-tracing={ version="14.0.0" }
 
-# TODO(Nando): Might be able to get rid of this
-# [dependencies.sc-keystore]
-# git    ='https://github.com/paritytech/substrate'
-# branch ="polkadot-v1.0.0"
-# version='4.0.0-dev'
-
-# [dependencies.sp-consensus-aura]
-# git    ='https://github.com/paritytech/substrate'
-# branch ="polkadot-v1.0.0"
-# version='0.10.0-dev'
-
 [features]
 default=["cli"]
 cli=[
-  "node-inspect",
-  "sc-cli",
-  "frame-benchmarking-cli",
-  # "substrate-frame-cli",
-  "sc-service/rocksdb",
   "clap",
   "clap_complete",
-  # "substrate-build-script-utils",
-  # "try-runtime-cli",
+  "frame-benchmarking-cli",
+  "node-inspect",
+  "sc-cli",
+  "sc-service/rocksdb",
 ]
 runtime-benchmarks=[
   "entropy-runtime/runtime-benchmarks",
