--- a/crates/test-cli/Cargo.toml
+++ b/crates/test-cli/Cargo.toml
@@ -18,3 +18,4 @@ tokio                ={ version="1.16", features=["macros", "rt-multi-thread", "
 hex                  ="0.4.3"
 bincode              ="1.3.3"
 x25519-dalek         ="2.0.0"
+sp-runtime           ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
