--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -11,80 +11,60 @@ publish   =false
 [package.metadata.docs.rs]
 targets=['x86_64-unknown-linux-gnu']
 
-[dependencies.codec]
-default-features=false
-features        =['derive']
-package         ='parity-scale-codec'
-version         ='3.0.0'
-
-[dependencies.frame-benchmarking]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-optional        =true
-version         ='4.0.0-dev'
-
-[dependencies.frame-support]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
-[dependencies.frame-system]
-default-features=false
-git             ='https://github.com/paritytech/substrate.git'
-branch          ="polkadot-v1.0.0"
-version         ='4.0.0-dev'
-
 [dependencies]
-pallet-authorship       ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-relayer          ={ version="0.0.9", default-features=false, path="../relayer" }
-pallet-programs         ={ version="0.0.9", default-features=false, path="../programs" }
-pallet-staking-extension={ version="0.0.9", default-features=false, path="../staking" }
+codec     ={ package="parity-scale-codec", version="3.6.3", default-features=false, features=["derive"] }
+lite-json ={ version="0.1", default-features=false }
+log       ={ version="0.4.0", default-features=false }
+scale-info={ version="2.1", default-features=false, features=["derive"] }
 
-scale-info           ={ version="2.0.1", default-features=false, features=["derive"] }
-log                  ={ version="0.4.0", default-features=false }
-sp-staking           ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-io                ={ version="23.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-lite-json            ={ version="0.1", default-features=false }
-sp-runtime           ={ version="24.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-sp-core              ={ version="21.0.0", default-features=false, git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-entropy-shared       ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
-sp-application-crypto={ version="23.0.0", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+frame-benchmarking   ={ version="25.0.0", default-features=false, optional=true }
+frame-support        ={ version="25.0.0", default-features=false }
+frame-system         ={ version="25.0.0", default-features=false }
+pallet-authorship    ={ version="25.0.0", default-features=false }
+sp-application-crypto={ version="27.0.0", default-features=false }
+sp-core              ={ version="25.0.0", default-features=false }
+sp-io                ={ version="27.0.0", default-features=false }
+sp-runtime           ={ version="28.0.0", default-features=false }
+sp-staking           ={ version="23.0.0", default-features=false }
+
+entropy-shared          ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
+pallet-relayer          ={ version="0.0.9", path="../relayer", default-features=false }
+pallet-programs         ={ version="0.0.9", path="../programs", default-features=false }
+pallet-staking-extension={ version="0.0.9", path="../staking", default-features=false }
 
 [dev-dependencies]
-sp-keystore                    ={ version="0.27.0", git="https://github.com/paritytech/substrate", branch="polkadot-v1.0.0" }
-parking_lot                    ="0.11.2"
-pallet-staking                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-staking                     ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-timestamp               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-frame-election-provider-support={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-balances                ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-staking-reward-curve    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-session                 ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-babe                    ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-sp-npos-elections              ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
-pallet-bags-list               ={ version="4.0.0-dev", default-features=false, git='https://github.com/paritytech/substrate.git', branch="polkadot-v1.0.0" }
+parking_lot="0.11.2"
+
+frame-election-provider-support={ version="25.0.0", default-features=false }
+pallet-babe                    ={ version="25.0.0", default-features=false }
+pallet-bags-list               ={ version="24.0.0", default-features=false }
+pallet-balances                ={ version="25.0.0", default-features=false }
+pallet-session                 ={ version="25.0.0", default-features=false }
+pallet-staking                 ={ version="25.0.0", default-features=false }
+pallet-staking-reward-curve    ={ version="10.0.0" }
+pallet-timestamp               ={ version="24.0.0", default-features=false }
+sp-keystore                    ={ version="0.31.0" }
+sp-npos-elections              ={ version="23.0.0", default-features=false }
 
 [features]
 default=['std']
 runtime-benchmarks=['frame-benchmarking']
 std=[
-  'codec/std',
-  'log/std',
   "scale-info/std",
+  "sp-application-crypto/std",
+  "sp-io/std",
+  "sp-npos-elections/std",
+  "sp-runtime/std",
+  'codec/std',
+  'frame-benchmarking/std',
   'frame-support/std',
   'frame-system/std',
-  'frame-benchmarking/std',
+  'log/std',
   'pallet-authorship/std',
-  'pallet-staking-extension/std',
-  'pallet-programs/std',
-  'pallet-balances/std',
   'pallet-babe/std',
+  'pallet-balances/std',
+  'pallet-programs/std',
   'pallet-relayer/std',
-  "sp-io/std",
-  "sp-runtime/std",
-  "sp-npos-elections/std",
-  "sp-application-crypto/std",
+  'pallet-staking-extension/std',
 ]
 try-runtime=['frame-support/try-runtime']
