--- a/crates/protocol/Cargo.toml
+++ b/crates/protocol/Cargo.toml
@@ -13,7 +13,7 @@ async-trait     ="0.1.73"
 entropy-shared  ={ path="../shared", default-features=false }
 synedrion       ="0.1"
 serde           ={ version="1.0", features=["derive"], default-features=false }
-subxt           ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1", default-features=false }
+subxt           ={ version="0.32.1", default-features=false }
 sp-core         ={ version="21.0.0", default-features=false, features=["full_crypto", "serde"] }
 tokio           ={ version="1.16", features=["sync", "rt", "macros"] }
 x25519-dalek    ={ version="2.0.0", features=["static_secrets"] }
