--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -34,7 +34,7 @@ axum       ={ version="0.6.18", features=["ws"] }
 axum-macros="0.3.7"
 
 # Substrate
-subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1" }
+subxt             ={ version="0.32.1" }
 parity-scale-codec="3.4.0"
 sp-core           ={ version="21.0.0", default-features=false }
 
