--- a/crates/testing-utils/Cargo.toml
+++ b/crates/testing-utils/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name      ="entropy-testing-utils"
-version   ='0.0.9'
+version   ='0.0.10'
 authors   =['Entropy Cryptography <engineering@entropy.xyz>']
 homepage  ='https://entropy.xyz/'
 license   ='AGPL-3.0-or-later'
@@ -9,7 +9,7 @@ edition   ='2021'
 publish   =false
 
 [dependencies]
-subxt             ={ package="subxt", git="https://github.com/paritytech/subxt.git", tag="v0.32.1" }
+subxt             ={ version="0.32.1" }
 sp-keyring        ="24.0.0"
 project-root      ="0.2.2"
 sp-core           ={ version="21.0.0", default-features=false }
