--- a/.github/workflows/srtool.yml
+++ b/.github/workflows/srtool.yml
@@ -18,8 +18,7 @@ jobs:
           runtime_dir: runtime
       - name: Summary
         run: |
-          echo '${{ steps.srtool_build.outputs.json }}' | jq . > ${{ matrix.chain }}-srtool-digest.json
-          python3 -c 'import sys, yaml, json; print(yaml.dump(json.loads(sys.stdin.read())))' < ${{ matrix.chain }}-srtool-digest.json
+          echo '${{ steps.srtool_build.outputs.json }}' | jq 'del(.context .info .runtimes.compact.subwasm .runtimes.compressed.subwasm)' | python3 -c 'import sys, yaml, json; print(yaml.dump(json.loads(sys.stdin.read())))'
           echo "Runtime location: ${{ steps.srtool_build.outputs.wasm }}"
       # - name: Archive Runtime
       #   uses: actions/upload-artifact@v2
