--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -94,7 +94,7 @@ pallet-transaction-payment-rpc    ={ version="27.0.0" }
 entropy-runtime         ={ version="0.0.10", path="../../runtime" }
 entropy-shared          ={ path="../../crates/shared", default-features=false, features=["wasm-no-std"] }
 pallet-free-tx          ={ version="0.0.10", path="../../pallets/free-tx" }
-pallet-relayer          ={ version="0.0.10", path="../../pallets/relayer" }
+pallet-registry          ={ version="0.0.10", path="../../pallets/registry" }
 pallet-staking-extension={ version="0.0.10", path="../../pallets/staking" }
 
 [build-dependencies]
