The CI builds are failing; is it because we lack vertical resources?

--- a/.github/workflows/container-build-and-push.yaml
+++ b/.github/workflows/container-build-and-push.yaml
@@ -35,7 +35,7 @@ on:
 jobs:
   build:
     name: Build and upload ${{ inputs.docker_build_arg_package }} binary
-    runs-on: ubuntu-22.04
+    runs-on: core-build-runner
     steps:
       - uses: actions/checkout@v4
       - name: Docker meta
