--- a/.github/workflows/build-and-release.yaml
+++ b/.github/workflows/build-and-release.yaml
@@ -4,6 +4,8 @@ run-name: Build and release (started by @${{ github.triggering_actor }})
 
 on:
   push:
+    branches:
+      - vi/**
     tags:
       # First, match SemVer.org conformant tags in the `release/` tagspace.
       - release/v[0-9]+.[0-9]+.[0-9]+-?**  # Release, or pre-release build.
