Add test for signing an Ethereum transaction (#664)
* Add test for signing an ethereum transaction

* Improve test

* Rm println

* Use ethers fn for converting public key to eth address

* Use ethers-core rather than ethers and improve mock tx following review

* Lockfile

--- a/crates/threshold-signature-server/Cargo.toml
+++ b/crates/threshold-signature-server/Cargo.toml
@@ -81,6 +81,7 @@ template-barebones   ={ git="https://github.com/entropyxyz/programs.git", tag="v
 lazy_static          ="1.4.0"
 entropy-protocol     ={ path="../protocol", features=["unsafe"] }
 blake3               ="1.5.0"
+ethers-core          ="2.0.14"
 
 [build-dependencies]
 vergen={ version="8.0.0", features=["build", "git", "gitcl"] }
