Use correct `update-type` syntax

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,8 +6,7 @@ updates:
       interval: "daily"
     # Let's get all patch updates grouped in a single PR to minimize spam.
     groups:
-      update-types:
-          - patch
+      update-types: "patch"
     # Ignore any Substrate major updates
     #
     # Automated Substrate releases cause Dependabot PR spam, so these must be updated manually when
